fix: adjust tile-label text contrast

--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -42,7 +42,7 @@
 .o-tile-label {
   line-height: 1;
   font-size: $font-m !important; // @override global.css
-  color: $color-grey-400;
+  color: $color-grey-500;
   margin-bottom: $space-2;
 }
 
